--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
-    <link href="styles.css" rel="stylesheet" media="none" onload="if(media!='all') media='all'">
-    <link rel="shortcut icon" href="favicon.ico" />
+    <link href="cv/styles.css" rel="stylesheet" media="none" onload="if(media!='all') media='all'">
+    <link rel="shortcut icon" href="cv/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <div class="container">
@@ -50,7 +50,7 @@
         </div>
 
       </div>
-      <div class="row" style="justify-content: space-between;">
+      <div class="row main-row">
         <div class="column skills">
           <h2>Skills</h2>
 
@@ -454,10 +454,9 @@
             </div>
           </div>
 
-          <hr />
-
           <div class="row">
             <div class="column">
+              <hr />
               <h4>Previous Careers</h4>
               <p>
                 <b>Accountant</b><br />
