--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
-    <link href="cv/styles.css" rel="stylesheet" media="none" onload="if(media!='all') media='all'">
-    <link rel="shortcut icon" href="cv/favicon.ico" type="image/x-icon" />
+    <link href="styles.css" rel="stylesheet" media="none" onload="if(media!='all') media='all'">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <div class="container">
