style: add some fun hover animations

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
       <div class="row about">
         <div class="column">
-          <h2>About Me</h2>
+          <h2 class="underline">About Me</h2>
           <p>
             I am full stack developer with 8 years of professional developer experience of projects in web, mobile and desktop applications.
             I have worked in large business critical projects within media, retail, car rental and affiliate marketing.
@@ -53,7 +53,7 @@
       </div>
       <div class="row main-row">
         <div class="column skills">
-          <h2>Skills</h2>
+          <h2 class="underline">Skills</h2>
 
           <table>
             <thead>
@@ -146,7 +146,7 @@
             </thead>
             <tbody>
               <tr>
-                <td>Node.js</td>
+                <td class="underline">Node.js</td>
                 <td>7 years</td>
                 <td>
                   I have used Node.js since around 2014.
@@ -154,7 +154,7 @@
                 </td>
               </tr>
               <tr>
-                <td>Go</td>
+                <td class="underline">Go</td>
                 <td>1.5 years</td>
                 <td>
                   I used Go at Sixt to create middleware APIs in the Go micro service architecture they had.
@@ -162,7 +162,7 @@
                 </td>
               </tr>
               <tr>
-                <td>Deno</td>
+                <td class="underline">Deno</td>
                 <td>0.5 years</td>
                 <td>
                   This is a super exciting tech.
@@ -171,7 +171,7 @@
                 </td>
               </tr>
               <tr>
-                <td>C# / .NET</td>
+                <td class="underline">C# / .NET</td>
                 <td>5 years</td>
                 <td>
                   I have used C# when working for a German optician and ASP.NET for a Swedish affiliate marketing company.
@@ -179,7 +179,7 @@
                 </td>
               </tr>
               <tr>
-                <td>Java</td>
+                <td class="underline">Java</td>
                 <td>3 years</td>
                 <td>
                   Most of my Java experience comes from Android, but I have been working for companies that were using Java for the backend.
@@ -187,14 +187,14 @@
                 </td>
               </tr>
               <tr>
-                <td>Bash / Shell</td>
+                <td class="underline">Bash / Shell</td>
                 <td>5 years</td>
                 <td>
                   Writing simple scripts and keeping your .zshrc full of handy aliases is something that helps everyday dev work.
                 </td>
               </tr>
               <tr>
-                <td>PHP</td>
+                <td class="underline">PHP</td>
                 <td>1 year</td>
                 <td>
                   Some of the clients I had were using PHP.
@@ -203,7 +203,7 @@
                 </td>
               </tr>
               <tr>
-                <td>MySQL / MS SQL</td>
+                <td class="underline">MySQL / MS SQL</td>
                 <td>8 years</td>
                 <td>
                   SELCT all FROM YourBase WHERE are = 'belongs to us';
@@ -221,7 +221,7 @@
             </thead>
             <tbody>
               <tr>
-                <td>AWS</td>
+                <td class="underline">AWS</td>
                 <td>5 years</td>
                 <td>
                   Most of the companies I have worked for are deploying to AWS.
@@ -230,7 +230,7 @@
                 </td>
               </tr>
               <tr>
-                <td>Docker</td>
+                <td class="underline">Docker</td>
                 <td>5 years</td>
                 <td>
                   I use Docker on almost a daily basis.
@@ -240,7 +240,7 @@
                 </td>
               </tr>
               <tr>
-                <td>Digital Ocean</td>
+                <td class="underline">Digital Ocean</td>
                 <td>2 years</td>
                 <td>
                   I use Digital Ocean for my personal projects and services.
@@ -253,11 +253,11 @@
           </table>
         </div>
         <div class="column experience">
-          <h2>Experience</h2>
+          <h2 class="underline">Experience</h2>
 
           <div class="row experience-1">
             <div class="column">
-              <h4>Tech Lead & React Native Developer</h4>
+              <h4 class="underline">Tech Lead & React Native Developer</h4>
               <div class="row">
                 <div class="column">
                   <b>Asurion</b> <em>(Japan)</em>
@@ -284,7 +284,7 @@
 
           <div class="row">
             <div class="column">
-              <h4>Tech Lead & React Native Developer</h4>
+              <h4 class="underline">Tech Lead & React Native Developer</h4>
               <div class="row">
                 <div class="column">
                   <b>Rakuten</b> <em>(Japan)</em>
@@ -299,8 +299,8 @@
                 We were using the latest web and mobile technologies in cooperation with teams across the globe.
               </p>
               <p>
-                <b>Tech used:</b> React Native, Objective-C (iOS), Java & Kotlin (Android),
-                Docker, Jenkins, Appium
+                <b>Tech used:</b> <span class="hvr-bob">React Native</span>, <span class="hvr-bob">Objective-C (iOS)</span>, <span class="hvr-bob">Java & Kotlin (Android)</span>,
+                <span class="hvr-bob">Docker</span>, <span class="hvr-bob">Jenkins</span>, <span class="hvr-bob">Appium</span>
               </p>
             </div>
           </div>
@@ -309,7 +309,7 @@
 
           <div class="row">
             <div class="column">
-              <h4>Full Stack React Web/Mobile Developer</h4>
+              <h4 class="underline">Full Stack React Web/Mobile Developer</h4>
               <div class="row">
                 <div class="column">
                   <b>Fusion Systems</b> <em>(Japan)</em>
@@ -337,7 +337,7 @@
 
           <div class="row experience-2">
             <div class="column">
-              <h4>Senior Consultant & Full Stack Developer</h4>
+              <h4 class="underline">Senior Consultant & Full Stack Developer</h4>
               <div class="row">
                 <div class="column">
                   <b>Netlight</b> <em>(Germany)</em>
@@ -409,7 +409,7 @@
 
           <div class="row">
             <div class="column">
-              <h4>Full Stack .NET Developer</h4>
+              <h4 class="underline">Full Stack .NET Developer</h4>
               <div class="row">
                 <div class="column">
                   <b>Mecenat</b> <em>(Sweden)</em>
@@ -435,7 +435,7 @@
 
           <div class="row">
             <div class="column">
-              <h4>Mobile Web Developer</h4>
+              <h4 class="underline">Mobile Web Developer</h4>
               <div class="row">
                 <div class="column">
                   <b>Flex Applications</b> <em>(Sweden)</em>
@@ -458,7 +458,7 @@
           <div class="row">
             <div class="column">
               <hr />
-              <h4>Previous Careers</h4>
+              <h4 class="underline">Previous Careers</h4>
               <p>
                 <b>Accountant</b><br />
                 I was working as an accountant for Renault where I did book keeping, accounts payable, yearly financial report, etc. It's a job where good structure and organization is key.
