--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="en">
   <head>
     <title>Oskar Lindgren</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
