chore: change email

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p>Fullstack Web/Mobile Developer</p>
         <div class="contact">
           <span>080-3400 4555</span><br />
-          <a href="mailto:cv@ringuren.com">cv@ringuren.com</a><br />
+          <a href="mailto:cv@lindgren.jp">cv@lindgren.jp</a><br />
           <a href="https://github.com/MrOggy85">github.com/MrOggy85</a><br />
           <a href="https://www.oskarlindgren.se/">www.oskarlindgren.se</a><br />
           <a href="https://www.oskarlindgren.se/blog">www.oskarlindgren.se/blog</a><br />
