feat: update cv content

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="column">
         <h2 class="underline">About Me</h2>
         <p>
-          I am full stack developer with 8 years of professional developer experience of projects in web, mobile and
+          I am full stack developer with 10 years of professional developer experience of projects in web, mobile and
           desktop applications.
           I have worked in large business critical projects within media, retail, car rental and affiliate marketing.
         </p>
@@ -90,7 +90,7 @@
             </tr>
             <tr>
               <td>React</td>
-              <td>7 years</td>
+              <td>8 years</td>
               <td>
                 I have used React since back in 2014.
                 It's the standard for creating web based experiences for a good reason.
@@ -154,7 +154,7 @@
           <tbody>
             <tr>
               <td class="underline">Node.js</td>
-              <td>7 years</td>
+              <td>8 years</td>
               <td>
                 I have used Node.js since around 2014.
                 It is such a freedom to be able to write JS/TS on the server.
@@ -169,12 +169,12 @@
               </td>
             </tr>
             <tr>
-              <td class="underline">Deno</td>
-              <td>0.5 years</td>
+              <td class="underline">Deno & Deno Deploy</td>
+              <td>1 year</td>
               <td>
-                This is a super exciting tech.
+                This is a super exciting framework and platform.
                 I use it for all my hobby projects now and hopefully soon professionally.
-                I am sure it is going to take over Node.js in a near future.
+                I hope it's going to take over Node.js in a near future.
               </td>
             </tr>
             <tr>
@@ -266,21 +266,49 @@
 
         <div class="row experience-1">
           <div class="column">
+            <h4 class="underline">Tech Lead & Fullstack Developer</h4>
+            <div class="row">
+              <div class="column">
+                <b>Oyo Japan</b> <em>(Tokoy, Japan)</em>
+              </div>
+              <div class="column period">
+                <p>2021-11 - present</p>
+              </div>
+            </div>
+            <p>
+              Oyo Japan is a hotel services company that serves both Hotel guests as well as owners.
+              I am working on our direct channel: <a href="https://oyojapan.jp" target="_blank">https://oyojapan.jp</a>
+              were customers can search for hotels and book a stay. <br />
+              My main responsibility is fullstack web development.
+              Apart from that I am the manager of a team of 2 devs. I am also
+              planning features and aligning with other parts of the company like marketing and operations.
+            </p>
+            <p>
+              <b>Tech used:</b> React (Next.js), React Native,
+              Node.js (Fastify), Docker, AWS (Fargate), Github Actions, Selenium, Strapi CMS
+            </p>
+          </div>
+        </div>
+
+        <hr />
+
+        <div class="row">
+          <div class="column">
             <h4 class="underline">Tech Lead & React Native Developer</h4>
             <div class="row">
               <div class="column">
-                <b>Asurion</b> <em>(Japan)</em>
+                <b>Asurion</b> <em>(Tokyo, Japan)</em>
               </div>
               <div class="column period">
-                <p>2020-10 - present</p>
+                <p>2020-10 - 2021-10</p>
               </div>
             </div>
             <p>
               Asurion is an american insurance company specialized in mobile phone insurance.
-              I am working on several projects to introduce new consumer services.
-              My responsibilities are mobile app and web development.
-              I work closely with BAs, managers, designers and other developers.
-              The main technology I use is React Native to create an iOS and Android app.
+              I was working on several projects to introduce new consumer services.
+              My responsibilities were mobile app and web development.
+              I worked closely with BAs, managers, designers and other developers.
+              The main technology I used was React Native to create an iOS and Android app.
             </p>
             <p>
               <b>Tech used:</b> React Native, Objective-C (iOS), Java & Kotlin (Android),
@@ -296,7 +324,7 @@
             <h4 class="underline">Tech Lead & React Native Developer</h4>
             <div class="row">
               <div class="column">
-                <b>Rakuten</b> <em>(Japan)</em>
+                <b>Rakuten</b> <em>(Tokyo, Japan)</em>
               </div>
               <div class="column period">
                 <p>2018-12 - 2020-10</p>
@@ -323,7 +351,7 @@
             <h4 class="underline">Full Stack React Web/Mobile Developer</h4>
             <div class="row">
               <div class="column">
-                <b>Fusion Systems</b> <em>(Japan)</em>
+                <b>Fusion Systems</b> <em>(Tokyo, Japan)</em>
               </div>
               <div class="column period">
                 <p>2018-03 - 2018-12</p>
@@ -428,7 +456,7 @@
             <h4 class="underline">Full Stack .NET Developer</h4>
             <div class="row">
               <div class="column">
-                <b>Mecenat</b> <em>(Sweden)</em>
+                <b>Mecenat</b> <em>(Gothenburg, Sweden)</em>
               </div>
               <div class="column period">
                 <p>2014-06 - 2015-06</p>
@@ -454,7 +482,7 @@
             <h4 class="underline">Mobile Web Developer</h4>
             <div class="row">
               <div class="column">
-                <b>Flex Applications</b> <em>(Sweden)</em>
+                <b>Flex Applications</b> <em>(Orebro, Sweden)</em>
               </div>
               <div class="column period">
                 <p>2012-04 - 2013-10</p>
