fix: Oyo Japan start date

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                 <b>Oyo Japan</b> <em>(Tokoy, Japan)</em>
               </div>
               <div class="column period">
-                <p>2021-11 - present</p>
+                <p>2021-08 - present</p>
               </div>
             </div>
             <p>
@@ -526,12 +526,12 @@
   <script>
     (function (f, a, t, h, o, m) {
       a[h] = a[h] || function () {
-        (a[h].q = a[h].q || []).push(arguments)
+        (a[h].q = a[h].q || []).push(arguments);
       };
       o = f.createElement('script'),
         m = f.getElementsByTagName('script')[0];
       o.async = 1; o.src = t; o.id = 'fathom-script';
-      m.parentNode.insertBefore(o, m)
+      m.parentNode.insertBefore(o, m);
     })(document, window, '//monitor.oskarlindgren.se/tracker.js', 'fathom');
     fathom('set', 'siteId', 'NYKME');
     fathom('trackPageview');
