feat: add u-next to experiences

--- a/index.html
+++ b/index.html
@@ -65,6 +65,38 @@
         <h2 id="Experience" class="underline">Experience 🚀</h2>
       </header>
       <div class="terminal-timeline">
+
+        <div class="terminal-card">
+          <div>
+            <span> <b>U-Next</b> <em>(Tokyo, Japan)</em></span>
+            <div class="column period">
+              <p>2022-06 - <em>present</em></p>
+            </div>
+            <p><b>Frontend Developer</b></p>
+            <p>
+              <a href="https://careers.unext.co.jp/" target="_blank">
+                <figure style="width: 10%;position: absolute;right: var(--global-space);top: var(--global-space);">
+                  <img src="logo_lockup_cmyk.png" alt="u-next logo" title="u-next logo">
+                </figure>
+              </a>
+
+              U-Next is one of Japan's biggest video streaming services. It has a big content library and exists on most
+              platforms where you can stream video.
+              I am working in the web team which are responsible for the main website: <a href="https://video.unext.jp/"
+                target="_blank">video.unext.jp</a> and some of the TV apps.
+
+              My main responsibility is web development, which includes developing and deploying code, communicating to
+              PO, designer and other developers.
+              It's a very flat organization so it means that it's easy to communcate and make connections.
+            </p>
+            <p>
+              <b>Tech used:</b> React (Next.js), Graphql, Node.js, Docker, Github Actions, Nginx, Selenium, PHP
+            </p>
+          </div>
+        </div>
+
+        <hr />
+
         <div class="terminal-card">
           <div>
             <span> <b>Tabist <em>(previously Oyo Japan)</em></b> <em>(Tokyo, Japan)</em></span>
