feat: add Graphql to Asurion experience

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             </p>
             <p>
               <b>Tech used:</b> React Native, Objective-C (iOS), Java & Kotlin (Android),
-              React, Node.js, Docker, AWS, Appium, Jenkins
+              React, Graphql, Node.js, Docker, AWS, Appium, Jenkins
             </p>
           </div>
         </div>
