feat: add dynamic years of experience

--- a/index.html
+++ b/index.html
@@ -198,18 +198,22 @@
         <hr />
 
         <div class="terminal-card">
-          <div>
-            <span> <b>Netlight</b> <em>(Germany)</em></span>
+          <div style="position: relative;">
+            <span> <a href="https://www.netlight.com/"><b>Netlight</b></a> <em>(Germany)</em></span>
             <div class="column period">
               <p>2015-11 - 2018-03</p>
             </div>
             <p><b>Senior Consultant & Full Stack Developer</b></p>
+
 
             <p>
               As a Netlight consultant, I was supporting clients on site with delivering software solutions by providing
               my technical and management expertise. The role was also to collaborate with sales to land new assignments
               and to mentor new recruits and support hr when hiring new talent.
             </p>
+            <figure style="width: 10%;position: absolute;right: var(--global-space);top: var(--global-space);">
+              <img src="netlight_logo.svg" alt="Netlight logo">
+            </figure>
             <table>
               <thead>
                 <tr>
@@ -219,7 +223,7 @@
               </thead>
               <tbody>
                 <tr>
-                  <td><b>Prosieben</b>, <em>Munich, Germany</em></td>
+                  <td><a href="https://www.prosieben.de/"><b>Prosieben</b></a>, <em>Munich, Germany</em></td>
                   <td>
                     <p>
                       Prosieben is one of Europes largest media company.
@@ -234,7 +238,7 @@
                   </td>
                 </tr>
                 <tr>
-                  <td><b>Sixt</b>, <em>Munich, Germany</em></td>
+                  <td><a href="https://www.sixt.com/"><b>Sixt</b></a>, <em>Munich, Germany</em></td>
                   <td>
                     <p>
                       Sixt is one of the world's biggest car rental company.
@@ -249,7 +253,7 @@
                   </td>
                 </tr>
                 <tr>
-                  <td><b>Fielmann</b>, <em>Hamburg, Germany</em></td>
+                  <td><a href="https://www.fielmann.de/"><b>Fielmann</b></a>, <em>Hamburg, Germany</em></td>
                   <td>
                     <p>
                       Fielmann is Germanys biggest optician.
@@ -273,7 +277,7 @@
 
         <div class="terminal-card">
           <div>
-            <span> <b>Mecenat</b> <em>(Gothenburg, Sweden)</em></span>
+            <span> <a href="https://mecenat.com/"><b>Mecenat</b></a> <em>(Gothenburg, Sweden)</em></span>
             <div class="column period">
               <p>2014-06 - 2015-06</p>
             </div>
@@ -296,7 +300,8 @@
 
         <div class="terminal-card">
           <div>
-            <span> <b>Flex Applications</b> <em>(Orebro, Sweden)</em></span>
+            <span> <a href="https://www.flexapplications.net/"><b>Flex Applications</b></a> <em>(Orebro,
+                Sweden)</em></span>
             <div class="column period">
               <p>2012-04 - 2013-10</p>
             </div>
@@ -350,7 +355,7 @@
         <tbody>
           <tr>
             <td>Javascript / HTML / CSS</td>
-            <td>15 years</td>
+            <td data-date="2004-06-01">x years</td>
             <td>
               I wrote my first website in high school around 2004.
               Since then I have been interested in web development.
@@ -359,7 +364,7 @@
           </tr>
           <tr>
             <td>Typescript</td>
-            <td>3 years</td>
+            <td data-date="2018-12-01">x years</td>
             <td>
               As a long time Javascript dev I was skeptical about Typescript.
               But, now I see it as a must for any serious app. With types, finally Javascript
@@ -368,7 +373,7 @@
           </tr>
           <tr>
             <td>React</td>
-            <td>8 years</td>
+            <td data-date="2014-04-01">x years</td>
             <td>
               I have used React since back in 2014.
               It's the standard for creating web based experiences for a good reason.
@@ -376,7 +381,7 @@
           </tr>
           <tr>
             <td>React Native</td>
-            <td>3 years</td>
+            <td data-date="2018-12-01">x years</td>
             <td>
               I have used React Native to create 3 apps (both iOS and Android) for companies
               and I used it for hobby projects.
@@ -432,7 +437,7 @@
         <tbody>
           <tr>
             <td class="underline">Node.js</td>
-            <td>8 years</td>
+            <td data-date="2014-04-01">x years</td>
             <td>
               I have used Node.js since around 2014.
               It is such a freedom to be able to write JS/TS on the server.
@@ -448,7 +453,7 @@
           </tr>
           <tr>
             <td class="underline">Deno & Deno Deploy</td>
-            <td>1 year</td>
+            <td>2 year</td>
             <td>
               This is a super exciting framework and platform.
               I use it for all my hobby projects now and hopefully soon professionally.
@@ -509,7 +514,7 @@
         <tbody>
           <tr>
             <td class="underline">AWS</td>
-            <td>5 years</td>
+            <td data-date="2016-07-01">x years</td>
             <td>
               Most of the companies I have worked for are deploying to AWS.
               I know my way around ECS to deploy docker containers (Tasks) and to setup simple resources.
@@ -518,7 +523,7 @@
           </tr>
           <tr>
             <td class="underline">Docker</td>
-            <td>5 years</td>
+            <td data-date="2015-11-01">x years</td>
             <td>
               I use Docker on almost a daily basis.
               When deploying any service or frontend it's always bundled in an image.
@@ -528,7 +533,7 @@
           </tr>
           <tr>
             <td class="underline">Digital Ocean</td>
-            <td>2 years</td>
+            <td data-date="2018-09-01">x years</td>
             <td>
               I use Digital Ocean for my personal projects and services.
               I self host Nextcloud, run a MySQL DB and some smaller projects on a VPC.
@@ -571,6 +576,8 @@
     fathom('trackPageview');
   </script>
   <!-- / Fathom -->
+
+  <script type="text/javascript" src="script.js"></script>
 
 </body>
 
