--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           <div>
             <span> <b>Asurion</b> <em>(Tokyo, Japan)</em></span>
             <div class="column period">
-              <p>2020-10 - 2021-10</p>
+              <p>2020-10 - 2021-07</p>
             </div>
             <p><b>Tech Lead & React Native Developer</b></p>
             <p>
@@ -213,7 +213,7 @@
             </p>
             <p>
               <b>Tech used:</b> React, React Native, Objective-C (iOS), Java &
-              Kotlin (Android), Java, Docker, AWS, Appium, Selenium, Pythong
+              Kotlin (Android), Java, Docker, AWS, Appium, Selenium, Python
               (Django)
             </p>
           </div>
