style: add rakuten logo

--- a/index.html
+++ b/index.html
@@ -166,10 +166,18 @@
         <hr />
 
         <div class="terminal-card">
-          <div>
+          <div style="position: relative;">
             <span> <b>Rakuten</b> <em>(Tokyo, Japan)</em></span>
             <div class="column period">
               <p>2018-12 - 2020-10</p>
+              <figure style="
+                      width: 10%;
+                      position: absolute;
+                      right: var(--global-space);
+                      top: var(--global-space);
+                    ">
+                <img src="rakuten.webp" alt="rakuten logo" title="rakuten logo" />
+              </figure>
             </div>
             <p><b>Tech Lead & React Native Developer</b></p>
 
@@ -239,12 +247,12 @@
               support hr when hiring new talent.
             </p>
             <figure style="
-                  width: 10%;
+                  width: auto;
                   position: absolute;
-                  right: var(--global-space);
+                  right: 10px;
                   top: var(--global-space);
                 ">
-              <img src="netlight_logo.svg" alt="Netlight logo" />
+              <img src="netlight_logo.svg" alt="Netlight logo" style="width:120px;" />
             </figure>
             <table>
               <thead>
